--- a/src/about.html
+++ b/src/about.html
@@ -25,7 +25,7 @@
 <body>
   <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
     <div id="banner-text">
-      <img src="\static\pg-logo.png" width="25%">
+      <img src="\static\pg-logo.png" id="logo">
     </div>
   </div>
   <!-- START NAVBAR -->
