--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 
             <div class="filter-content">
               <div class="card-body">
-                <form action="filter" method="POST">
+                <form>
                   <label class="form-check">
                     <input class="form-check-input" name="filter-option" type="checkbox" id="fastfood"
                       value="Fast Food">
@@ -127,7 +127,7 @@
                     </span>
                   </label> <!-- form-check.// -->
                   <br>
-                  <button id="filter-btn" type="submit" class="btn btn-block btn-primary"
+                  <button id="filter-btn" type="button" class="btn btn-block btn-primary"
                     onclick="filterData()">Filter</button>
                   <button type="button" class="btn btn-block btn-outline-primary" onclick="resetMap()">
                     Reset
