--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 
             <div class="filter-content">
               <div class="card-body">
-                <form>
+                <form method="POST" action="/">
                   <label class="form-check">
                     <input class="form-check-input" name="filter-option" type="checkbox" id="fastfood"
                       value="Fast Food">
