--- a/src/docs.html
+++ b/src/docs.html
@@ -53,6 +53,10 @@
         <li class="nav-item">
           <a class="nav-link active" href="docs.html">Documentation</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+        </li>
       </ul>
 
     </div>
@@ -79,30 +83,44 @@
           MD. This data is updated daily.</p>
         <br>
         <h2 class="header">Technology Stack</h2>
-        <p>The front of this application was created using HTML, bootstrap, leaflet, and javascript. HTML was used to 
-            build a foundation and bootstrap provided us with the tools to complete the design aspect of this application. Bootstrap 
-            was implemented to provide a CSS framework for this application. Bootstrap made it easy for us to implement navagiation menus
-            and color to this application. leaflet provided us with map that was easy to work with when it came to connecting 
-            the back-end of this application to the front-end. The leaflet map allowed us to showcase the raw data and convert the data 
-            into something that our users can understand. Javascript allowed us to work with the API and server, and dynamically modify HTML 
-            and CSS to update a user interface. The developer manual provides in-depth information about each of the tools that was 
-            use to create this web application.   
-          </p>
-          <h2 class="header">User Guide</h2>
-          <p>This user guide is to help first time users to navigate through the our web application. The user guide will cover information
-            on how to user the filters and different features of the map.</p>
-          <h5>Filters</h5>
-          <p>The first step in using the FSPG application is applying the filters that relate to your specific search. This can be done by 
-              checking the relevant boxes on the left hand side under the Filters section. </p>
-          <h5>Map</h5>
-          <p>Once you have selected filter options you’ll want to click “filter” in order for the filters that you manipulated in the first step to show up on the map. Restaurants 
-            that meet the criteria of the filters in step 1 will show up on the map for you to be able to visualize their location.
-            </p>
-          <p>Once the data has loaded, you’ll be able to click on the markers and click on "get results" to see the result for that particular resturant. You will be able to see the 
-            resturant name and whether or not the resturant passed the inspection. The result will also give you a link to google map which you can click on the google map icon and the 
-          link will take you to google map. if you want more detail result for a particular resturant you can click on "see detailed inspection result" and you will be able to see how the
-        inspection was conducted and the different criteria that was taken into consideration for a resturant pass or fail the inspection test. </p>
-        
+        <p>The front of this application was created using HTML, bootstrap, leaflet, and javascript. HTML was used to
+          build a foundation and bootstrap provided us with the tools to complete the design aspect of this application.
+          Bootstrap
+          was implemented to provide a CSS framework for this application. Bootstrap made it easy for us to implement
+          navagiation menus
+          and color to this application. leaflet provided us with map that was easy to work with when it came to
+          connecting
+          the back-end of this application to the front-end. The leaflet map allowed us to showcase the raw data and
+          convert the data
+          into something that our users can understand. Javascript allowed us to work with the API and server, and
+          dynamically modify HTML
+          and CSS to update a user interface. The developer manual provides in-depth information about each of the tools
+          that was
+          use to create this web application.
+        </p>
+        <h2 class="header">User Guide</h2>
+        <p>This user guide is to help first time users to navigate through the our web application. The user guide will
+          cover information
+          on how to user the filters and different features of the map.</p>
+        <h5>Filters</h5>
+        <p>The first step in using the FSPG application is applying the filters that relate to your specific search.
+          This can be done by
+          checking the relevant boxes on the left hand side under the Filters section. </p>
+        <h5>Map</h5>
+        <p>Once you have selected filter options you’ll want to click “filter” in order for the filters that you
+          manipulated in the first step to show up on the map. Restaurants
+          that meet the criteria of the filters in step 1 will show up on the map for you to be able to visualize their
+          location.
+        </p>
+        <p>Once the data has loaded, you’ll be able to click on the markers and click on "get results" to see the result
+          for that particular resturant. You will be able to see the
+          resturant name and whether or not the resturant passed the inspection. The result will also give you a link to
+          google map which you can click on the google map icon and the
+          link will take you to google map. if you want more detail result for a particular resturant you can click on
+          "see detailed inspection result" and you will be able to see how the
+          inspection was conducted and the different criteria that was taken into consideration for a resturant pass or
+          fail the inspection test. </p>
+
 
       </div>
 
