--- a/src/contact.html
+++ b/src/contact.html
@@ -41,7 +41,7 @@
 
     <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
         <div id="banner-text">
-            <img src="\static\pg-logo.png" id="logo">
+            <a href="index.html"><img src="\static\pg-logo.png" id="logo"></a>
         </div>
     </div>
 
