--- a/src/contact.html
+++ b/src/contact.html
@@ -79,8 +79,8 @@
     <div id="contact">
 
         <h3 class="display-4">Contact Us</h3>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
-            to featured content or information.</p>
+        <p class="lead">Feel free to send us any of your comments, questions, or concerns. We are always looking to
+            improve!</p>
         <hr class="my-4">
 
         <form method="POST" action="msg">
