alt tags for images

--- a/src/about.html
+++ b/src/about.html
@@ -25,7 +25,8 @@
 <body>
   <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
     <div id="banner-text">
-      <a href="index.html"><img src="\static\pg-logo.png" id="logo"></a>
+      <a href="index.html"><img src="\static\pg-logo.png" id="logo"
+          alt="Prince George's County Health Inspections Logo"></a>
     </div>
   </div>
   <!-- START NAVBAR -->
@@ -89,7 +90,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="/static/jake.jpg" alt="Avatar">
+                        <img src="/static/jake.jpg" alt="Jake Cupani Team Manager">
                       </div>
                       <div class="flip-card-back">
                         <div class="team-name">
@@ -105,7 +106,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="/static/matt.jpeg" alt="Avatar">
+                        <img src="/static/matt.jpeg" alt="Matt Ye Lead Designer">
                       </div>
                       <div class="flip-card-back">
                         <div class="team-name">
@@ -123,7 +124,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="/static/aparna.jpg" alt="Avatar">
+                        <img src="/static/aparna.jpg" alt="Aparna Ranganathan Assistant Designer and Documentation">
                       </div>
                       <div class="flip-card-back">
                         <div class="team-name">
@@ -143,7 +144,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="/static/Gyan.jpeg" alt="Avatar">
+                        <img src="/static/Gyan.jpeg" alt="Gyan Kadariya Branding and Documentation">
                       </div>
                       <div class="flip-card-back">
                         <div class="team-name">
@@ -162,7 +163,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="/static/Nadine.JPG" alt="Avatar">
+                        <img src="/static/Nadine.JPG" alt="Nadine Shaker Readme Manager">
                       </div>
                       <div class="flip-card-back">
                         <div class="team-name">
@@ -178,7 +179,7 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="/static/will.jpg" alt="Avatar">
+                        <img src="/static/will.jpg" alt="Will Kraft Developer">
                       </div>
                       <div class="flip-card-back">
                         <div class="team-name">
