--- a/src/contact.html
+++ b/src/contact.html
@@ -40,7 +40,8 @@
 
     <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
         <div id="banner-text">
-            <a href="index.html"><img src="\static\pg-logo.png" id="logo"></a>
+            <a href="index.html"><img src="\static\pg-logo.png" id="logo"
+                    alt="Prince George's County Health Inspections Logo"></a>
         </div>
     </div>
 
