updated docs page

--- a/src/contact.html
+++ b/src/contact.html
@@ -102,7 +102,7 @@
 
     <footer>
         <div class="text-center">
-            <p>Made with ❤ by Group 18 - INST 377.</p>
+            <p>Made with <span id="heart">❤</span> by Group 18 - INST 377.</p>
             <p>Team members: Matt Ye, Jake Cupani, Nadine Shaker, Will Kraft, Gyan Kadariya, Aparna Ranganathan</p>
         </div>
     </footer>
