--- a/src/about.html
+++ b/src/about.html
@@ -201,7 +201,7 @@
         <br>
         <footer>
           <div class="container text-center">
-            <p>Made with ❤ by Group 18 - INST 377.</p>
+            <p>Made with <span id="heart">❤</span> by Group 18 - INST 377.</p>
             <p>Team members: Matt Ye, Jake Cupani, Nadine Shaker, Will Kraft, Gyan Kadariya, Aparna Ranganathan</p>
           </div>
         </footer>
