--- a/src/docs.html
+++ b/src/docs.html
@@ -70,7 +70,11 @@
         <hr>
         <div class="row">
           <div class="col-sm-12">
-            <h2 class="section-head">Getting Started</h2>
+            <h2 class="section-head">Getting Started - User Guide</h2>
+            <p>This user guide is to help first time users to navigate through the our web application. The user guide
+              will
+              cover information
+              on how to user the filters and different features of the map.</p>
             <br>
             <div class="accordion" id="accordionExample">
               <div class="card">
@@ -87,7 +91,8 @@
                   <div class="card-body">
                     The first step in using the FSPG application is applying the filters that relate to your specific
                     search. This can be done by checking the relevant boxes on the left hand side under the Filters
-                    section, and clicking “Filter”.
+                    section, and clicking “Filter”. You can also hit the "Reset" button to remove all establishments
+                    from the map and start over.
                   </div>
                   <img class="getting-started" src="/static/filters.png">
                 </div>
@@ -103,9 +108,25 @@
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                   <div class="card-body">
-                    You’ll notice that the map has updates with markers of the locations of food establishments that
-                    meet the criteria of the filters that you selected. Click on the marker you want to learn more about
-                    and then click “Get Results” to learn more about the food establishment.
+                    <p>Once you have selected filter options you’ll want to click “filter” in order for the filters that
+                      you
+                      manipulated in the first step to show up on the map. Restaurants
+                      that meet the criteria of the filters in step 1 will show up on the map for you to be able to
+                      visualize their
+                      location.
+                    </p>
+                    <p>Once the data has loaded, you’ll be able to click on the markers and click on "get results" to
+                      see the result
+                      for that particular resturant. You will be able to see the
+                      resturant name and whether or not the resturant passed the inspection. The result will also give
+                      you a link to
+                      google map which you can click on the google map icon and the
+                      link will take you to google map. if you want more detail result for a particular resturant you
+                      can click on
+                      "see detailed inspection result" and you will be able to see how the
+                      inspection was conducted and the different criteria that was taken into consideration for a
+                      resturant pass or
+                      fail the inspection test. </p>
                   </div>
                   <img class="getting-started" src="/static/map.png">
                 </div>
@@ -154,38 +175,20 @@
           that was
           use to create this web application.
         </p>
-        <h2 class="header">User Guide</h2>
-        <p>This user guide is to help first time users to navigate through the our web application. The user guide will
-          cover information
-          on how to user the filters and different features of the map.</p>
-        <h5>Filters</h5>
-        <p>The first step in using the FSPG application is applying the filters that relate to your specific search.
-          This can be done by
-          checking the relevant boxes on the left hand side under the Filters section. </p>
-        <h5>Map</h5>
-        <p>Once you have selected filter options you’ll want to click “filter” in order for the filters that you
-          manipulated in the first step to show up on the map. Restaurants
-          that meet the criteria of the filters in step 1 will show up on the map for you to be able to visualize their
-          location.
-        </p>
-        <p>Once the data has loaded, you’ll be able to click on the markers and click on "get results" to see the result
-          for that particular resturant. You will be able to see the
-          resturant name and whether or not the resturant passed the inspection. The result will also give you a link to
-          google map which you can click on the google map icon and the
-          link will take you to google map. if you want more detail result for a particular resturant you can click on
-          "see detailed inspection result" and you will be able to see how the
-          inspection was conducted and the different criteria that was taken into consideration for a resturant pass or
-          fail the inspection test. </p>
+
+
+
+
+
 
 
       </div>
 
     </div>
   </div>
-
   <footer>
     <div class="container text-center">
-      <p>Made with ❤ by Group 18 - INST 377.</p>
+      <p>Made with <span id="heart">❤</span> by Group 18 - INST 377.</p>
       <p>Team members: Matt Ye, Jake Cupani, Nadine Shaker, Will Kraft, Gyan Kadariya, Aparna Ranganathan</p>
     </div>
   </footer>
