tech stack image

--- a/src/docs.html
+++ b/src/docs.html
@@ -70,7 +70,7 @@
         <hr>
         <div class="row">
           <div class="col-sm-12">
-            <h2 class="section-head">Getting Started - User Guide</h2>
+            <h2 class="header">Getting Started - User Guide</h2>
             <p>This user guide is to help first time users to navigate through the our web application. The user guide
               will
               cover information
@@ -160,7 +160,8 @@
           MD. This data is updated daily.</p>
         <br>
         <h2 class="header">Technology Stack</h2>
-        <p>The front of this application was created using HTML, bootstrap, leaflet, and javascript. HTML was used to
+        <p>The front of this application was created using HTML, bootstrap, leaflet, and javascript.
+          HTML was used to
           build a foundation and bootstrap provided us with the tools to complete the design aspect of this application.
           Bootstrap
           was implemented to provide a CSS framework for this application. Bootstrap made it easy for us to implement
@@ -174,11 +175,8 @@
           and CSS to update a user interface. The developer manual provides in-depth information about each of the tools
           that was
           use to create this web application.
+          <img id="tech-stack" src="/static/tech-stack.png" width=70%>
         </p>
-
-
-
-
 
 
 
