--- a/src/docs.html
+++ b/src/docs.html
@@ -175,7 +175,7 @@
           and CSS to update a user interface. The developer manual provides in-depth information about each of the tools
           that was
           use to create this web application.
-          <img id="tech-stack" src="/static/tech-stack.png" width=70%>
+          <img id="tech-stack" src="/static/tech-stack.png" width=70% alt="technology stack logos">
         </p>
 
 
