--- a/src/about.html
+++ b/src/about.html
@@ -72,7 +72,8 @@
               target="_blank">2</a></sup>.
           While other counties may have more money, the residents of Prince George’s county lack the same resources. We
           believe everyone deserves
-          to know what exactly is going into their body, and if that's going to be safe. This is why we've create PGCFI.
+          to know what exactly is going into their body, and if that's going to be safe. This is why we've created Food
+          Safety PG.
         </p>
         <p><strong>Currently, there is no easily accessible and intuitive way to determine compliant restaurants and
             eateries.</strong></p>
