google maps info in docs

--- a/src/docs.html
+++ b/src/docs.html
@@ -144,7 +144,9 @@
                   <div class="card-body">
                     Underneath, you’ll see that the ‘Name’, ‘Location’, and ‘Inspection Results’ sections of the page
                     have updated with the results related to the food establishment that you have selected. Green
-                    results are in compliance, while red results are out of compliance.
+                    results are in compliance, while red results are out of compliance. Additionally, if you click the
+                    little Google Maps icon, it will take you to the respective establishment's Google Maps page where
+                    you can access user reviews, directions, and other information.
                   </div>
                   <img class="getting-started" src="/static/results.png">
                 </div>
