--- a/src/contact.html
+++ b/src/contact.html
@@ -78,7 +78,7 @@
     </nav>
     <div id="contact">
 
-        <h3 class="display-4">Contact Us</h3>
+        <h3 class="section-head display-4">Contact Us</h3>
         <p class="lead">Feel free to send us any of your comments, questions, or concerns. We are always looking to
             improve!</p>
         <hr class="my-4">
